# NeoFur

./: .clang-format  .clangd  .gitignore  README.md
device-tree/: GX040R-dsi1.dtbo
docker/: Dockerfile  docker-compose.yml  entrypoint.sh  fish_install.yaml
src/neofur_display/: CMakeLists.txt  package.xml
src/neofur_display/include/neofur_display/: app.h  atomic.h  device.h  display.h  drm_types.h  layer.h  node.h
src/neofur_display/include/neofur_display/app/: render_node.h
src/neofur_display/include/neofur_display/graphics/: camera.h  material.h  mesh.h  model.h  resource_manager.h  scene.h
src/neofur_display/include/neofur_display/platform/: drm_atomic.h  drm_device.h  drm_display.h  egl_backend.h  gbm_wrapper.h  surface.h
src/neofur_display/include/neofur_display/rendering/: renderer.h
src/neofur_display/launch/: display.launch.py
src/neofur_display/resource/eyes/: convert.sh  green_left_221x240.rgba  green_left_571x620.rgba
src/neofur_display/resource/shaders/: pbr.frag  pbr.vert
src/neofur_display/src/: app.cc  atomic.cc  device.cc  display.cc  layer.cc  main.cc  node.cc
src/neofur_display/src/app/: renderer_node.cc
src/neofur_display/src/graphics/: material.cc  mesh.cc  model.cc  resource_manager.cc  scene.cc
src/neofur_display/src/platform/: drm_atomic.cc  drm_device.cc  drm_display.cc  egl_backend.cc  gbm_wrapper.cc  surface.cc
src/neofur_display/src/rendering/: renderer.cc
src/neofur_interfaces/: CMakeLists.txt  package.xml
src/neofur_interfaces/msg/: DisplayMsg.msg  RenderCommand.msg
src/neofur_utils/: CMakeLists.txt  package.xml
src/neofur_utils/include/neofur_utils/: expected.hpp  log_manager.h  my_error.h  source_location.h  thread_pool_manager.h  types.h  utils.h
